<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvWarehouseCardTitle">Warehouse</string>
    <string name="tvWarehouseCardDescription">A list of all the ingredients you currently own.</string>
    <string name="tvRecipesCardTitle">Recipes</string>
    <string name="tvRecipesCardDescription">A list of your own made recipes.</string>
    <string name="btn_what_can_you_make">What can u make</string>

    <string name="toast_fill_everything">Please fill in all the fields before saving</string>

    <!-- Fragment Titles -->
    <string name="landing_fragment_title">Warehouse Manager</string>
    <string name="tv_expire_date">Expire date:</string>
    <string name="tv_ingredient_add_amount">Amount:</string>
    <string name="btn_save">Save</string>
    <string name="btn_scan_barcode">scan barcode</string>
    <string name="tv_recipe_ingredients">Ingredients:</string>
    <string name="tv_recipe_preparing">Preparing:</string>
</resources>