<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LandingFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/cv_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/warehouse_card_image"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chairs_interior_design_restaurant" />

            <TextView
                android:id="@+id/warehouse_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:text="@string/tvWarehouseCardTitle"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <View
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/warehouse_card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:text="@string/tvWarehouseCardDescription"
                android:textSize="16dp"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/btnWhatCanUMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_warehouse">

        <LinearLayout
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipes_card_image"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chairs_interior_design_restaurant" />

            <TextView
                android:id="@+id/recipes_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:text="@string/tvRecipesCardTitle"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="24dp"
                android:textStyle="bold" />

            <View
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/recipes_card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:text="@string/tvRecipesCardDescription"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@android:color/darker_gray"
                android:textSize="16dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnWhatCanUMake"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_what_can_you_make"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_recipes" />
</androidx.constraintlayout.widget.ConstraintLayout>