<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddIngredientFragment">

    <ScrollView
        android:layout_width="345dp"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/cardview_light_background"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerPadding="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_recipe"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_recipe_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="Name recipe"
                            android:textSize="20sp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_recipe_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Description"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ingredient_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_recipe_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Categories:"
                        android:imeOptions="actionSend"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                </com.google.android.material.chip.ChipGroup>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TextView
                    android:id="@+id/tv_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/tv_recipe_ingredients"
                    android:textSize="22dp"
                    android:textStyle="bold"></TextView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FAB_add_ingredient_to_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tv_recipe_preparing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/tv_recipe_preparing"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_recipe_preparing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Preperations:"
                    android:layout_marginBottom="25dp"
                    android:textSize="15sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

    <Button
        android:id="@+id/btn_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>